--- a/src/content/docs/book/part-2-organised-code/1-structuring-code/3-guided-tour/00-2-explore-functions.mdx
+++ b/src/content/docs/book/part-2-organised-code/1-structuring-code/3-guided-tour/00-2-explore-functions.mdx
@@ -1,7 +1,7 @@
 ---
-title: Explore functions
+title: Explore Functions
 sidebar:
-  label: " - Explore functions"
+  label: " - Explore Functions"
 ---
 import { Accordion, AccordionItem } from 'accessible-astro-components'
 
