--- a/src/content/docs/book/part-2-organised-code/5-operators-generics/3-guided-tour/2-generic-array.mdx
+++ b/src/content/docs/book/part-2-organised-code/5-operators-generics/3-guided-tour/2-generic-array.mdx
@@ -133,7 +133,7 @@ You can often approach writing templated classes by first writing them with a fi
     We should also go ahead and rename the class to something more fitting. Just `array` could work, but C++ already has a type called `array`, so let's call ours `bounded_array`.
 
     :::tip
-        Declaring a template parameter list looks like:
+        Declaring a template parameter list looks like this:
         ```c++
         template< ... parameters here ... >
         class bounded_array
@@ -203,7 +203,7 @@ You can often approach writing templated classes by first writing them with a fi
 
     Already we can use our `bounded_array` with any type! We could store `book`s, `enemy`s, `color`s, `price`s, etc. Try modifying your test code to try out some different types.
 
-    :::tip[An fun example]
+    :::tip[A fun example]
         To visualize things, you could try creating an array of rectangle and colours, then draw these to the screen:
 
         <Accordion>
