Move fly catch to structuring data (wip)

--- a/src/content/docs/book/part-2-organised-code/2-structuring-data/3-guided-tour/0-3-explore-struct.mdx
+++ b/src/content/docs/book/part-2-organised-code/2-structuring-data/3-guided-tour/0-3-explore-struct.mdx
@@ -128,7 +128,7 @@ target.y = 300;
 target.radius = 75;
 ```
 
-Alternative, you can use an initialiser in the variable declaration. This type of assignment can only happen when you declare a variable. You cannot use it at a later stage to change the values in that variable.
+Alternatively, you can use an initialiser in the variable declaration.
 
 ```cpp
 // Declare and initialise a target variable
