Add programming process video

--- a/src/content/docs/book/part-0-getting-started/1-building-programs/2-intro-tour/1-process.mdx
+++ b/src/content/docs/book/part-0-getting-started/1-building-programs/2-intro-tour/1-process.mdx
@@ -1,14 +1,13 @@
 ---
 title: Programming Process
-draft: true
 ---
 import { YouTube } from 'astro-embed';
 
 <div class="not-content">
-  <YouTube id="" params="fs=1&modestbranding=1&rel=0"/>
+  <YouTube id="tozcVdH5gH4" params="fs=1&modestbranding=1&rel=0"/>
 </div>
 
-Programming is an iterative process, where we grow the program a little at a time. In this video we walk through the process.
+Programming is an iterative process, where we grow the program a little at a time. In this video we walk through the process of iterating a program.
 
 Watch the video to see how to:
 
