Add computer are unintelligent video

--- a/src/content/docs/book/part-0-getting-started/1-building-programs/2-intro-tour/2-unintelligent.mdx
+++ b/src/content/docs/book/part-0-getting-started/1-building-programs/2-intro-tour/2-unintelligent.mdx
@@ -1,14 +1,13 @@
 ---
-title: Computer are Unintelligent
-draft: true
+title: Computers are Unintelligent
 ---
 import { YouTube } from 'astro-embed';
 
 <div class="not-content">
-  <YouTube id="" params="fs=1&modestbranding=1&rel=0"/>
+  <YouTube id="LW_DHxWk0yw" params="fs=1&modestbranding=1&rel=0"/>
 </div>
 
-Now, let's step back and think a little about what we are programming. What is the computer capable of?
+Let's step back and think a little about what we are programming. What is the computer capable of?
 
 Watch the video to:
 
