Add compilers and machine code video

--- a/src/content/docs/book/part-0-getting-started/1-building-programs/2-intro-tour/3-machine-code.mdx
+++ b/src/content/docs/book/part-0-getting-started/1-building-programs/2-intro-tour/3-machine-code.mdx
@@ -1,14 +1,13 @@
 ---
 title: Compilers & Machine Code
-draft: true
 ---
 import { YouTube } from 'astro-embed';
 
 <div class="not-content">
-  <YouTube id="" params="fs=1&modestbranding=1&rel=0"/>
+  <YouTube id="lUSG9r4A5m4" params="fs=1&modestbranding=1&rel=0"/>
 </div>
 
-Given the computer is unintelligent, how do you give it instructions? Explore the idea of machine code, and the steps the compiler performs.
+Given that the computer is unintelligent, how do you give it instructions? Explore the idea of machine code, and the steps the compiler performs.
 
 Watch the video to:
 
