Progress edit on chapter 1 guided tour

--- a/src/content/docs/book/part-0-getting-started/1-building-programs/3-guided-tour/1-install.mdx
+++ b/src/content/docs/book/part-0-getting-started/1-building-programs/3-guided-tour/1-install.mdx
@@ -5,10 +5,10 @@ import { CardGrid } from "@astrojs/starlight/components";
 import Card from "/src/components/Card.astro";
 import LinkCard from "/src/components/LinkCard.astro";
 
-There are several tools that you need to have installed on your computer, so you can build and run the programs we will explore in this guide. These include:
+There are several tools that you need to have installed on your computer so you can build and run the programs we will explore in this guide. These include:
 
-- **Visual Studio Code**, also commonly known as *VS Code* or just *Code*, is a powerful and versatile code editor that enables efficient coding, debugging, and collaboration for your SplashKit projects!
-- [SplashKit](https://splashkit.io) is a beginner's all-purpose software toolkit that will allow you to create fun and exciting programs more easily, especially for Graphical User Interface (GUI) programs.
+- **Visual Studio Code**, also commonly known as *VS Code* or just *Code*, is a powerful and versatile code editor that enables efficient coding, debugging, and collaboration for your SplashKit projects.
+- [SplashKit](https://splashkit.io) is a beginner's all-purpose software toolkit that will allow you to create fun and exciting programs more easily, especially for graphical programs.
 - Compilers to convert your source code into programs you can run.
 
 Different operating systems have different installation steps.
@@ -38,16 +38,16 @@ Click on one of the supported operating systems below to see more info about the
 
 ## Installation Guides
 
-These guides have been created to help you set up your computer and install the necessary Applications and Tools that you will need to code in C# and C++ with SplashKit.
+These guides have been created to help you set up your computer and install the necessary applications and tools that you will need to code in C++ and C# with SplashKit.
 
 ### <span style="display:none;">Linux</span>
 
 <Card title="Linux" icon="fa-brands:linux">
   Follow these steps to set up your Linux computer to get started coding.
 
-  For this you will need a *Linux* computer, or Virtual Machine, running the Debian distribution, or a distribution derived from Debian, such as Raspberry Pi OS.
+  For this you will need a computer or Virtual Machine running the Debian Linux distribution, or a distribution derived from Debian such as Raspberry Pi OS.
 
-  *Note: If you use a different Linux distribution, the steps will differ slightly.*
+  *Note: If you use a different Linux distribution, these steps will differ slightly.*
 
   <LinkCard
     title="Set up my Linux Box"
@@ -62,8 +62,6 @@ These guides have been created to help you set up your computer and install the 
   Follow these steps to set up your Mac computer to get started coding.
 
   For this you will need a *macOS* computer running OSX 13 (macOS Ventura) or later.
-  
-  Note: *If you are running an earlier version, make sure to read the [Using older OSX version](https://splashkit.io/troubleshoot/macos/issue-10-using-older-osx-version/) troubleshooting guide once you have finished the setup steps, or if you have any issues.*
 
   <LinkCard
     title="macOS Software Setup Guide"
@@ -100,6 +98,8 @@ These guides have been created to help you set up your computer and install the 
 
   For this you will a Virtual Machine, such as VMWare, Virtual Box, or Parallels.
 
+  Note: *We recommend you only use this option if you can not get the tools installed locally using the installation guide for your operating system.*
+
   <LinkCard
     title="Virtual Machine"
     href="/book/part-0-getting-started/1-building-programs/3-guided-tour/1-install-os/2-6-setup-virtual-machine"
@@ -112,9 +112,7 @@ These guides have been created to help you set up your computer and install the 
 These guides have been created to simplify the process of troubleshooting any issues you might face during your software installation process.
 
 <Card title="Troubleshooting" icon="fa:wrench">
-To get help with troubleshooting installation issues (or any other troubleshooting), you can read through the *General Troubleshooting* tips, or you may find the solution to your problem in the *Specific Issues* guides.
-
-[](/book/appendix/0-installation/3-0-troubleshooting-install)
+To get help with troubleshooting installation issues, first can read through the *General Troubleshooting* tips. If those do not help, you may find the solution to your problem in the *Specific Issues* pages.
 
 ### <span style="display:none;">General Troubleshooting</span>
 
@@ -132,4 +130,3 @@ To get help with troubleshooting installation issues (or any other troubleshooti
     description="Go to the 'Specific Issues' section of the 'Installation Troubleshooting' page"
   />
 </Card>
-
