--- a/src/content/docs/book/part-0-getting-started/1-building-programs/2-intro-tour/4-splashkit.mdx
+++ b/src/content/docs/book/part-0-getting-started/1-building-programs/2-intro-tour/4-splashkit.mdx
@@ -1,14 +1,13 @@
 ---
 title: SplashKit?
-draft: true
 ---
 import { YouTube } from 'astro-embed';
 
 <div class="not-content">
-  <YouTube id="" params="fs=1&modestbranding=1&rel=0"/>
+  <YouTube id="3mj5Mscsqt4" params="fs=1&modestbranding=1&rel=0"/>
 </div>
 
-[SplashKit](https://splashkit.io) is a library we have created to help supercharge the programs you write as you learn to program. This library will allow us to focus on the concepts, and the transferrable skills that will set you up to succeed in programming across a range of languages and devices.
+[SplashKit](https://splashkit.io) is a library we have created to help supercharge the programs you write as you learn how to program. This library will allow us to focus on the concepts, and transferrable skills that will set you up to succeed in programming across a range of languages and devices.
 
 Watch the video to:
 
